--- a/css/email-form.css
+++ b/css/email-form.css
@@ -59,3 +59,53 @@ label span {
     margin-left: 0.25em;
     font-weight: normal;
 }
+
+
+/* form validation styles*/
+/*@import url("https://fonts.googleapis.com/css?family=Open+Sans");*/
+
+/*input.error {
+  background: #ffcbd9 !important; 
+  border: 1px solid #c51244 !important; 
+  color: #c51244;
+}*/
+
+.pure-form input.error {
+    color: #b94a48;
+    border-color: #e9322d;
+    background: #ffcbd9 !important; 
+}
+
+label.error {
+  /*font-family: "Open Sans";
+  font-size: 14px;
+  color: #FC0A1A;//#ff0000;*/
+  
+  /*color: #cc0033;
+  font-family: Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  font-weight: bold;
+  line-height: 20px;
+  text-shadow: 1px 1px rgba(250,250,250,.3);*/
+  
+  font-family: Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  background: #c51244 !important;
+  padding: 5px !important;
+  border-radius: 0 !important;
+  position: relative; 
+  //display: inline-block !important;
+  box-shadow: 1px 1px 1px #aaaaaa;
+  margin-top: 10px !important;
+}
+
+label.error:before{
+  content: '';  
+  width: 0;  
+  height: 0;  
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-bottom: 10px solid #c51244;
+  position: absolute;  
+  top: -10px; 
+}
